@@ -4324,6 +4324,26 @@ Set the hex file format.
 \begin_inset Text
 
 \begin_layout Standard
+m=<expression>
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Standard
+Set the maximum ROM address.
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row topline="true">
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Standard
 mm=[ON|OFF]
 \end_layout
 
